--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,8 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:20.0.0'
     // Places API
     implementation 'noman.placesapi:placesAPI:1.1.3'
+    // 갤러리
+    implementation 'androidx.exifinterface:exifinterface:1.3.5'
 
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
