--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'com.android.application'
-    id 'com.google.gms.google-services'
+    //id 'com.google.gms.google-services'
 }
 
 android {
@@ -44,13 +44,17 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:20.0.0'
     // Places API
     implementation 'noman.placesapi:placesAPI:1.1.3'
+// 갤러리
+    implementation 'androidx.exifinterface:exifinterface:1.3.5'
+   // Room components
+    implementation "androidx.room:room-runtime:2.2.5"
+    annotationProcessor "androidx.room:room-compiler:2.2.5"
+    androidTestImplementation "androidx.room:room-testing:2.2.5"
 
-    //firebase
-    //implementation platform('com.google.firebase:firebase-bom:31.0.2')
-    //implementation 'com.google.firebase:firebase-messaging:23.1.0'
-    //implementation 'com.google.firebase:firebase-analytics'
-    //implementation 'com.google.firebase:firebase-admin:9.1.1'
-
+    //Lifecycle compents
+    implementation "androidx.lifecycle:lifecycle-viewmodel:2.2.0"
+    implementation "androidx.lifecycle:lifecycle-livedata:2.2.0"
+    implementation "androidx.lifecycle:lifecycle-common-java8:2.2.0"
 
 
 }
