--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,8 @@
         android:glEsVersion="0x00020000"
         android:required="true" />
 
-    <permission
-        android:name="com.cookandroid.swu.permission.MAPS_RECEIVE"
-        android:label="signature" /> <!-- 카메라/갤러리 -->
+
+    <!-- 카메라/갤러리 -->
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -26,6 +25,7 @@
 
     <uses-permission android:name="android.permission.INTERNET " />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" /> <!-- 맵 -->
+    <!--  맵  -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="com.goolge.android.providers.gsf.permission.READ_GSERVICES" />
@@ -50,7 +50,6 @@
             android:parentActivityName=".MainActivity" />
         <activity android:name=".DsSearch" />
         <activity android:name=".PillSearch" />
-        <activity android:name=".PlusPill" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -69,7 +68,8 @@
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/external" />
-        </provider> <!-- map API키 -->
+        </provider>
+        <!-- map API키 -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyB8EppTWA_tqiA4TVfX74jJNCDy2ARyzzs" />
