--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'com.android.application'
-    //id 'com.google.gms.google-services'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -44,17 +44,13 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:20.0.0'
     // Places API
     implementation 'noman.placesapi:placesAPI:1.1.3'
-// 갤러리
+    // 갤러리
     implementation 'androidx.exifinterface:exifinterface:1.3.5'
-   // Room components
-    implementation "androidx.room:room-runtime:2.2.5"
-    annotationProcessor "androidx.room:room-compiler:2.2.5"
-    androidTestImplementation "androidx.room:room-testing:2.2.5"
+    // 캘린더
+    implementation 'com.github.prolificinteractive:material-calendarview:1.4.3'
 
-    //Lifecycle compents
-    implementation "androidx.lifecycle:lifecycle-viewmodel:2.2.0"
-    implementation "androidx.lifecycle:lifecycle-livedata:2.2.0"
-    implementation "androidx.lifecycle:lifecycle-common-java8:2.2.0"
+    // firebase
+    implementation 'com.google.firebase:firebase-firestore:24.4.1'
 
 
 }
