--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
     <uses-feature
         android:name="android.hardware.camera"
         android:required="false" />
-
+    <!--firebase-->
     <uses-permission android:name="android.permission.INTERNET " />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" /> <!-- 맵 -->
     <!--  맵  -->
