--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@
         android:value="@integer/google_play_services_version" />
 
     <application
+        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -44,9 +45,12 @@
         <activity
             android:name=".EboxAdd"
             android:exported="false"
-            android:parentActivityName=".MainActivity"/>
+            android:parentActivityName=".EboxAdd"/>
+
         <activity android:name=".DsSearch" />
-        <activity android:name=".PillSearch" />
+        <activity android:name=".PillSearch"
+            android:exported="false"
+            android:parentActivityName=".DsSearch" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
