--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.2.2'
     implementation 'com.google.firebase:firebase-storage:20.1.0'
     implementation 'com.google.firebase:firebase-database:20.1.0'
+    implementation 'androidx.room:room-runtime:2.4.3'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -57,8 +58,12 @@ dependencies {
     // 캘린더
     implementation 'com.github.prolificinteractive:material-calendarview:1.4.3'
 
-    // firebase
-    implementation 'com.google.firebase:firebase-firestore:24.4.1'
+    // Room
+    implementation 'androidx.room:room-runtime:2.3.0'
+    annotationProcessor 'androidx.room:room-compiler:2.3.0'
 
+    //토글버튼
+    implementation 'com.github.angads25:toggle:1.1.0'
+    annotationProcessor 'androidx.room:room-compiler:2.4.3'
 
 }
