--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.navigation:navigation-fragment:2.2.2'
     implementation 'androidx.navigation:navigation-ui:2.2.2'
+    //firebase
     implementation 'com.google.firebase:firebase-storage:20.1.0'
     implementation 'com.google.firebase:firebase-database:20.1.0'
     implementation 'androidx.room:room-runtime:2.4.3'
@@ -58,12 +59,16 @@ dependencies {
     // 캘린더
     implementation 'com.github.prolificinteractive:material-calendarview:1.4.3'
 
-    // Room
-    implementation 'androidx.room:room-runtime:2.3.0'
-    annotationProcessor 'androidx.room:room-compiler:2.3.0'
 
     //토글버튼
     implementation 'com.github.angads25:toggle:1.1.0'
     annotationProcessor 'androidx.room:room-compiler:2.4.3'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+
+    // recyclerview
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
 
 }
