약 검색 완성 (상세보기 완성, 최종11.29)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,10 @@
             android:name=".EboxAdd"
             android:exported="false"
             android:parentActivityName=".EboxAdd"/>
+        <activity
+            android:name=".DruginfoActivity"
+            android:exported="false"
+            android:parentActivityName=".DsSearch"/> //?
 
         <activity android:name=".DsSearch" />
         <activity android:name=".PillSearch"
