--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,6 @@
         <intent>
             <action android:name="android.media.action.IMAGE_CAPTURE" />
         </intent>
-
     </queries>
 
     <uses-feature
@@ -20,8 +19,10 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.ACCESS_MEDIA_LOCATION"/>
-    <uses-feature android:name="android.hardware.camera"
+    <uses-permission android:name="android.permission.ACCESS_MEDIA_LOCATION" />
+
+    <uses-feature
+        android:name="android.hardware.camera"
         android:required="false" />
 
     <uses-permission android:name="android.permission.INTERNET " />
@@ -35,24 +36,30 @@
         android:value="@integer/google_play_services_version" />
 
     <application
-        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.SWU">
+        android:theme="@style/Theme.SWU"
+        android:usesCleartextTraffic="true">
+        <activity
+            android:name=".RecomSearchActivity"
+            android:exported="false" />
+        <activity
+            android:name=".RecomMainActivity"
+            android:exported="false" />
         <activity
             android:name=".EboxAdd"
             android:exported="false"
-            android:parentActivityName=".EboxAdd"/>
+            android:parentActivityName=".EboxAdd" />
         <activity
             android:name=".DruginfoActivity"
             android:exported="false"
-            android:parentActivityName=".DsSearch"/> //?
-
+            android:parentActivityName=".DsSearch" />
         <activity android:name=".DsSearch" />
-        <activity android:name=".PillSearch"
+        <activity
+            android:name=".PillSearch"
             android:exported="false"
             android:parentActivityName=".DsSearch" />
         <activity android:name=".MainActivity">
@@ -76,7 +83,6 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/external" />
         </provider>
-
     </application>
 
 </manifest>
