--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,14 +30,26 @@
         android:value="@integer/google_play_services_version" />
 
     <application
-        android:usesCleartextTraffic="true"
         android:allowBackup="false"
         android:hardwareAccelerated="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.SWU">
+        android:theme="@style/Theme.SWU"
+        android:usesCleartextTraffic="true">
+        <activity
+            android:name=".DruginfoActivity"
+            android:exported="false"
+            android:parentActivityName=".DsSearch"/>
+        <activity
+            android:name=".RecomSearchActivity"
+            android:exported="false"
+            android:parentActivityName=".DsSearch"/>
+        <activity
+            android:name=".RecomMainActivity"
+            android:exported="false"
+            android:parentActivityName=".DsSearch"/>
         <activity android:name=".PlistActivity" />
         <activity android:name=".HomeDel" />
         <activity
@@ -67,8 +79,7 @@
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/external" />
-        </provider>
-        <!-- map API키-->
+        </provider> <!-- map API키 -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyBtmz_f0Xep_Y897O5TxEwu9J_wO1IouLs" />
